# ocaml-dockertk

./: .gitignore  .travis.opam  .travis.yml  Dockerfile  Makefile  Makefile.config.in  Makefile.inc  README.md  aclocal.m4  configure.ac
docker_gc/: .ocamlinit  Makefile  dockerGc_Configuration.ml.in  dockerGc_Container.ml  dockerGc_Container.mli  dockerGc_Image.ml  dockerGc_Image.mli  dockerGc_Main.ml  dockerGc_Policy.ml  dockerGc_Policy.mli  example.conf
opam/: descr  opam
