### configure.ac -- Autoconf for Docker Toolkit

# Docker Toolkit (https://github.com/michipili/dockertk)
# This file is part of Docker Toolkit
#
# Copyright © 2015 Michael Grünewald
#
# This file must be used under the terms of the CeCILL-B.
# This source file is licensed as described in the file COPYING, which
# you should have received as part of this distribution. The terms
# are also available at
# http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt

AC_INIT([docker_gc/dockerGc_Main.ml])
AC_CONFIG_MACRO_DIR([Library/Autoconf])
AC_NEED_OCAML
AC_NEED_FINDLIB
AC_NEED_FINDLIB_PKG([gasoline])
AC_NEED_FINDLIB_PKG([lemonade])
AC_NEED_FINDLIB_PKG([lwt.ppx])
AC_NEED_FINDLIB_PKG([rashell])
AC_NEED_FINDLIB_PKG([str])
AC_CONFIG_FILES([Makefile.config docker_gc/dockerGc_Configuration.ml])
AC_OUTPUT

### End of file `configure.ac'
